# tektite

./: .gitignore  .oxfmt.json  .prettierignore  README.md  eslint.config.js  index.tsx  package.json  prettier.config.js  skills-lock.json  svelte.config.js  test-formatting.ts  tsconfig.json  vite.config.js  vitest.config.ts
.githooks/: pre-commit.example
.github/workflows/: lint.yml
.husky/: README.md  commit-msg  pre-push
app/: app.tsx
app/game/: constants.ts  index.ts  reducer.ts  selectors.ts  state.ts  types.ts
app/game/__tests__/: core.test.ts
app/lib/: random.ts  use-game.tsx
app/lib/__tests__/: random.test.ts
app/screens/: app-shell.tsx  encounter.tsx  game-over.tsx  market.tsx  title.tsx  travel.tsx
plans/: ends-game.md
src/: app.html  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  vault.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs  note.rs  vault.rs
src-tauri/src/services/: file_service.rs  mod.rs  vault_service.rs
src/app/components/icons/: CloseIcon.svelte  MinusIcon.svelte
src/app/components/ui/: Button.svelte
src/app/lib/keybinds/: manager.ts
src/app/lib/queries/: index.ts  notes.ts
src/app/lib/stores/: layout.svelte.ts
src/app/lib/utils/: file.ts  storage.ts  valut.ts
src/app/styles/: editor.css  fonts.css  reset.css  root.css  theme.css  utils.css
src/app/types/: errors.ts  file.ts  index.ts  note.ts  vault.ts
src/routes/: +layout.svelte  +page.svelte
(+13 files in other folders)
